--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
     </header>
 
         <div class="hero-container">
+
             <div class="main-hero">
+
+                <div class="hero-data">
+
+                <h1 class="hero-text">It's the food and groceries you love, delivered</h1>
+                <div class="hero-input">
+                    
+                    <label for=""><input placeholder="Your street and street number" type="search"></label>
+                    <span class="hero-icon"> <i class="fa-solid fa-location-dot"></i> &nbsp Locate me</span>
+                </div>
+                </div>
 
             </div>
 
