--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 <div class="hero-input">
                     
                     <label for=""><input placeholder="Your street and street number" type="search"></label>
-                    <span class="hero-icon"> <i class="fa-solid fa-location-dot"></i> &nbsp Locate me</span>
+                    <span class="hero-icon"> <i class="fa-solid fa-location-dot"></i> &nbsp <span class="lcd-me">Locate me</span></span>
+                    <button>Fine Food</button>
                 </div>
                 </div>
 
