--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                 </div>
 
             </div>
-
+            <div class="hero-img">
                 <img src="images/refresh-hero-home-pk.webp" alt="">
+            </div>
 
         </div>
         
@@ -67,8 +68,12 @@
                <img src="images/home-vendor-pk.webp" alt="">
               
                <div class="abc">
-
+                <img  src="images/UnderCon_icon.svg.png" alt="">
+                <span>Website under construction...</span>
                  </div>
+              </div>
+
+              <div class="locations">
 
               </div>
 
