--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="images/Foodpanda-Logo.wine.png" alt="">
         </a>
         <div class="header-btns">
-
+            
             <div class="login-btn">
                 Log In
             </div>
@@ -21,6 +21,7 @@
             <div class="signup-btn">
                 Sign Up
             </div>
+
             <div class="header-icons">
                 <span>
                 <i class="fa-solid fa-globe"></i>
@@ -34,9 +35,13 @@
                 <i class="fa-solid fa-chevron-down"></i>
             </span>
             </div>
+
             <div class="header-role">
                 <i class="fa-solid fa-bag-shopping"></i>
             </div>
+
+        </div>
+        
     </header>
 
         <div class="hero-container">
@@ -54,9 +59,10 @@
                 </div>
                 </div>
 
-            </div>
-            <div class="hero-img">
+                </div>
+                <div class="hero-img">
                 <img src="images/refresh-hero-home-pk.webp" alt="">
+                </div>
             </div>
 
         </div>
@@ -78,9 +84,12 @@
                  </div>
               </div>
 
-              <div class="locations">
+              <h2 class="loocation-text">Find us in these cities and many more!</h2>
+
+                <div class="locations">
 
                 <div class="locations-box">
+                    <img src="https://live.staticflickr.com/3361/3522849377_ecab21a65a_b.jpg" width="100%" alt="">
                 </div>
 
                 <div class="locations-box">
@@ -95,19 +104,19 @@
                 <div class="locations-box">
                 </div>
 
-                <div class="locations-box">
+                 <div class="locations-box">
                 </div>
 
-                <div class="locations-box">
-                </div>
+                   <div class="locations-box">
+                   </div>
 
-                <div class="locations-box">
-                </div>
+                   <div class="locations-box">
+                   </div>
 
-                <div class="locations-box">
-                </div>
+                   <div class="locations-box">
+                    </div>
 
-                <div class="locations-box">
+                    <div class="locations-box">
                     </div>
 
                     <div class="locations-box">
