--- a/index.html
+++ b/index.html
@@ -264,10 +264,29 @@
                             <td>Areas delivered in Lahore</td>
                             <td>Areas delivered in Lahore</td>
                         </tr>
-
                         </table>
                     </div>
+                   </div>
 
+                    <div class="footer-branding">
+
+                        <div class="footer-logo">
+                            <img class="f-p" height="28px" src="images/Foodpanda-Logo.wine.png" alt="">
+                            &nbsp;
+                            &nbsp;
+                            <img height="28px" src="images/delivry-hero.png" alt="">
+                        </div>
+
+                        <div class="footer-icons">
+
+                            <div class="footer-icons-box">
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                            <div class="footer-icons-box">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </div>
+
+                        </div>
                    </div>
                 </footer>
 
