--- a/index.html
+++ b/index.html
@@ -90,35 +90,60 @@
 
                 <div class="locations-box">
                     <img src="images/islamad.jfif" width="100%" height="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>islamad</span>
+                    </div>
                 </div>
 
                 <div class="locations-box">
                     <img src="https://live.staticflickr.com/3361/3522849377_ecab21a65a_b.jpg" width="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>Karachi</span>
+                    </div>
                 </div>
 
                 <div class="locations-box">
                     <img src="images/lahore.jpg" width="100%" height="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>Lahore</span>
+                    </div>
                 </div>
 
                 <div class="locations-box">
                     <img src="images/faisalabad.jpg" width="100%" height="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>Faisalabad</span>
+                    </div>
                 </div>
 
                 <div class="locations-box">
                     <img src="images/rawal pindi.jpg" width="100%" height="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>Pindi</span>
+                    </div>
                 </div>
 
                  <div class="locations-box">
                     <img src="images/abbottabad.jfif" width="100%" height="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>abbottabad</span>
+                    </div>
                 </div>
 
                    <div class="locations-box">
                     <img src="images/bhawapur.jpg" width="100%" height="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>Bhawalpur</span>
+                    </div>
                    </div>
 
                    <div class="locations-box">
                     <img src="images/deraghazikha.webp" width="100%" height="100%" alt="">
+                    <div class="locations-box-card">
+                        <span>DG Khan</span>
+                    </div>
                    </div>
+
                 </div>
 
                 <h2 class="feed-text">Put us in your pocket</h2>
